Some refactoring and small fixes