@@ -73,7 +73,7 @@ public class Grid {
         LinearLayout.LayoutParams layoutParamsStaticColumnHeader = new LinearLayout.LayoutParams(LinearLayout.LayoutParams.WRAP_CONTENT, ViewGroup.LayoutParams.WRAP_CONTENT);
         layoutParamsStaticColumnHeader.setMargins(0, 0, 0, cellUI.getMargins().getMargin());
         staticColumnHeader.setLayoutParams(layoutParamsStaticColumnHeader);
-        List<Cell> columnHeaderRow = columnHeaders.getFirst();
+        List<Cell> columnHeaderRow = columnHeaders.get(0);
         int lastItemIndex = columnHeaderRow.size() - 1;
         for (int i = 0; i < columnHeaderRow.size(); i++) {
             Cell cell = columnHeaderRow.get(i);
